- remove genre from authors and books - various css improvements - language updates

--- a/src/templates/pages/homepage.html
+++ b/src/templates/pages/homepage.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="featured-novel">
       <header>
-        <h2 class="heading">Featured Novel</h2>
+        <h2 class="heading">Featured Book</h2>
       </header>
       <article>
         <div class="section">
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="featured-posts">
       <header>
-        <h2 class="heading">Featured Posts</h2>
+        <h2 class="heading">Book Posts</h2>
       </header>
       <ul>
         {% for post in posts.items.slice(0, 3) %}
