Fix broken script tag

--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -15,6 +15,6 @@
 </div>
 
 {% include "partials/footer.html" %}
-<script src="/assets/{{ global.assets["javascripts/main.js"] }}"></script>
+<script src="/javascripts/main.js"></script>
 </body>
 </html>
