--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -1,39 +1,38 @@
 {% extends "layouts/default.html" %}
 
+
 {% block content %}
-<div class="container">
-  <article class="author">
-    <header class="author-header">
-      <h1>{{ author.name }}</h1>
-    </header>
-    <div>
-      <div class="author-wrap">
-        <div class="author-meta">
-          <div class="author-photo">
-            <img src="{{ author.photo.s3Key | image }}">
-          </div>
-        </div>
-        <div class="post-content">
-          {{ author.biographyHtml | safe }}
-        </div>
+  <header class="header">
+    <h1>{{ author.name }}</h1>
+  </header>
+
+  <div class="author">
+    <div class="container">
+      <div class="author__image">
+        <img src="{{ author.photo.path | image }}">
+      </div>
+
+      <div class="content">
+        {{ author.biographyHtml | safe }}
       </div>
     </div>
-  </article>
-
-  <div class="author-books">
-    <h2 class="heading">Books by {{ author.name }}</h2>
-    <ul>
-      {% for book in author.authored.results %}
-      <li class="book-tout">
-        <a href="{{ book | route('books') }}">
-          <div class="book-image">
-            <img src="{{ book.coverImage.s3Key | image }}">
-          </div>
-          <h3>{{ book.title }}</h3>
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
   </div>
-</div>
+
+  <div class="our-books">
+    <div class="container">
+      <header>
+        <h2 class="heading">Books by {{ author.name }}</h2>
+      </header>
+      <ul>
+        {% for book in author.authored.items %}
+          <li class="book-tout">
+            <a href="{{ book | route('books') }}">
+              <img class="book-tout__image" src="{{ book.coverImage.path | image }}">
+              <h3>{{ book.title }}</h3>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 {% endblock %}
