--- a/src/templates/pages/posts/landing.html
+++ b/src/templates/pages/posts/landing.html
@@ -1,35 +1,36 @@
 {% extends "layouts/default.html" %}
 
 {% block content %}
-<section>
-  <div class="container">
-    <div class="all-posts">
-      <header>
-        <h1 class="heading">All Posts</h1>
-      </header>
-      <ul class="posts">
+
+  <header class="header">
+    <h1>All Posts</h1>
+  </header>
+
+  <div class="post-list">
+    <div class="container">
+      <ul>
         {% for post in items %}
-        <li class="post-tout">
-          <a href="{{ post | route('posts') }}">
-            <div class="section">
-              <div class="image-container">
-                <img src="{{ post.featuredImage | image }}" alt="Novel Image">
+          <li>
+            <a href="{{ post | route('posts') }}" class="tout">
+              <div>
+                <img src="{{ post.featureImage | image }}">
               </div>
-            </div>
-            <div class="section">
-              <h3>{{ post.title }}</h3>
-              <p><time>{{ post._enabledAt | date("MMMM D, YYYY") }}</time></p>
-              <p>{{ post.dek }}</p>
-            </div>
-          </a>
-        </li>
+
+              <div class="tout__content">
+                <h3>{{ post.title }}</h3>
+                <p>
+                  <time>{{ post._enabledAt | date("MMMM D, YYYY") }}</time>
+                </p>
+                <p>{{ post.deck }}</p>
+              </div>
+            </a>
+          </li>
         {% endfor %}
       </ul>
-
-      {% include "partials/pagination.html" %}
     </div>
   </div>
-</section>
 
-{% include "partials/our-books.html" %}
+  {% include "partials/pagination.html" %}
+
+  {% include "partials/our-books.html" %}
 {% endblock %}
