Update copyright statement in the footer

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="page-footer">
   <div class="container">
-    <small>{{ site.settings.copyright }}</small>
+    <small>&copy;{{ now | date('YYYY') }} <a href="https://www.takeshape.io" rel="nofollow">TakeShape Inc.</a></small>
   </div>
 </footer>
